<?php
interface AdministratorDAO {
    public function createAdministrator($administrator);
    public function updateAdministrator($administrator);
    public function deleteAdministrator($administrator);
    public function getAllAdministrators();
}

?>