@startuml
title Classes - Hospital Patient Archive Management

' Common Enums
enum Gender {
  F
  M
}

enum BloodGroup {
  A_PLUS
  A_MINUS
  B_PLUS
  B_MINUS
  AB_PLUS
  AB_MINUS
  O_PLUS
  O_MINUS
}

enum status {
  confirmed
  canceled
}

' Abstract User class
abstract class User {
  - Int UserID
  - string name
  - string Password 
  - string email
  - string address
  - string phoneNumber
  - string CIN
}

' Doctor package
package "Doctor Package" {
  class Doctor {
    searchPatient()
    updatePatient()
  }

  interface DoctorDAO {
    createDoctor()
    findDoctor()
    updateDoctor()
    deleteDoctor()
  }
  Doctor -- DoctorDAO

  class DoctorDAOImpl implements DoctorDAO {
    // Implementation of DoctorDAO methods
  }

  User <|-- Doctor 
}

' Nurse package
package "Nurse Package" {
  class Nurse {
    searchPatient()
    updatePatient()
    createPatient()
    addAppointments()
    cancelAppointments()
    verifyInsurance()
  }

  interface NurseDAO {
    createNurse()
    findNurse()
    updateNurse()
    deleteNurse()
  }
  Nurse -- NurseDAO

  class NurseDAOImpl implements NurseDAO {
    // Implementation of NurseDAO methods
  }

  User <|-- Nurse 
}

' Administrator package
package "Administrator Package" {
  class Administrator {
    createDoctor()
    createNurse()
    deleteDoctor()
    deleteNurse()
  }

  interface AdministratorDAO {
    createAdministrator()
    updateAdministrator()
    deleteAdministrator()
  }
  Administrator -- AdministratorDAO

  class AdministratorDAOImpl implements AdministratorDAO {
    // Implementation of AdministratorDAO methods
  }

  User <|-- Administrator 
}

' Patient package
package "Patient Package" {
  class Patient {
    - int patientID
    - string CIN
    - datetime birthDate
    - string firstName
    - string lastName
    - string insuranceInfo
    - string address
    - string phoneNumber
    - string email
    - string emergencyContact
    - BloodGroup bloodGroup
    - string allergies
    - string emergencyContactName
    - string emergencyContactPhone
    - string emergencyContactEmail
    - string emergencyContactAddress
    - string emergencyContactRelation
    - BloodGroup emergencyContactBloodGroup
  }

  interface PatientDAO {
    createPatient()
    getPatient()
    updatePatient()
    deletePatient()
    getPatients()
  }
  Patient -- PatientDAO


  class PatientDAOImpl implements PatientDAO {
    // Implementation of PatientDAO methods
  }
}

' Appointment package
package "Appointment Package" {
  class Appointment {
    - int appointmentId
    - datetime appointmentDate
    - status appointmentStatus
  }

  interface AppointmentDAO {
    createAppointment()
    readAppointment()
    updateAppointment()
    deleteAppointment()
  }
  Appointment -- AppointmentDAO

  class AppointmentDAOImpl implements AppointmentDAO {
    // Implementation of AppointmentDAO methods
  }

  Patient "1" - "0..*" Appointment
}

' Medical Record package
package "Medical Record Package" {
  class MedicalRecord {
    - int recordId
    - datetime dateCreated
    - string treatmentPlan
    - string testResults
    - blob imageData
  }

  interface MedicalRecordDAO {
    createMedicalRecord()
    readMedicalRecord()
    updateMedicalRecord()
    deleteMedicalRecord()
  }
 MedicalRecord -- MedicalRecordDAO

  class MedicalRecordDAOImpl implements MedicalRecordDAO {
    // Implementation of MedicalRecordDAO methods
  }

  Patient "1" o-- "0..*" MedicalRecord
}

' Relationships between packages
Doctor -- Appointment
Nurse -- Appointment
Doctor -- MedicalRecord

@enduml
